[gd_scene load_steps=18 format=3 uid="uid://d2jve8ywp1d6e"]

[ext_resource type="Script" uid="uid://doccafbrd73ex" path="res://scenes/final_arena.gd" id="1_xfrjw"]
[ext_resource type="Texture2D" uid="uid://ct76vmetecoj" path="res://assets/backgrounds/finalarena.png" id="2_7d7oq"]
[ext_resource type="Texture2D" uid="uid://02d1hcwx5n4a" path="res://assets/backgrounds/finalcrowd.png" id="3_jl8jn"]
[ext_resource type="Texture2D" uid="uid://dfnanabixmdab" path="res://assets/backgrounds/skirmishjudges.png" id="6_250v0"]
[ext_resource type="Texture2D" uid="uid://bbhneyfvckvxd" path="res://assets/backgrounds/skirmishjudgestwo.png" id="7_wydrv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6j7ju"]
size = Vector2(160, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxekb"]
size = Vector2(8, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_v04gj"]
atlas = ExtResource("3_jl8jn")
region = Rect2(0, 0, 480, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxn05"]
atlas = ExtResource("3_jl8jn")
region = Rect2(0, 320, 480, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_gxo1l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v04gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxn05")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5an3s"]
atlas = ExtResource("6_250v0")
region = Rect2(0, 0, 480, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp2qc"]
atlas = ExtResource("6_250v0")
region = Rect2(0, 320, 480, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_05btb"]
atlas = ExtResource("6_250v0")
region = Rect2(0, 640, 480, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_uocmf"]
atlas = ExtResource("7_wydrv")
region = Rect2(0, 0, 480, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_tydqu"]
atlas = ExtResource("7_wydrv")
region = Rect2(0, 320, 480, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_3upmd"]
atlas = ExtResource("7_wydrv")
region = Rect2(0, 640, 480, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_ylhsm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5an3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp2qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05btb")
}],
"loop": true,
"name": &"judges_one",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uocmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tydqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3upmd")
}],
"loop": true,
"name": &"judges_two",
"speed": 5.0
}]

[node name="FinalArena" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xfrjw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -160.0
offset_right = 240.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7d7oq")

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2(320, 120)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
shape = SubResource("RectangleShape2D_6j7ju")

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2(320, 260)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
shape = SubResource("RectangleShape2D_6j7ju")

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2(236, 192)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
shape = SubResource("RectangleShape2D_nxekb")

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2(404, 192)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
shape = SubResource("RectangleShape2D_nxekb")

[node name="Crowd" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gxo1l")
offset = Vector2(320, 160)

[node name="Judges" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ylhsm")
animation = &"judges_two"
offset = Vector2(320, 160)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "30s"

[node name="PanelStartFight" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="Column" type="VBoxContainer" parent="PanelStartFight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="LblTitle" type="Label" parent="PanelStartFight/Column"]
layout_mode = 2
text = "OLD FOLK'S DOME"
horizontal_alignment = 1

[node name="LblNames" type="Label" parent="PanelStartFight/Column"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Granny vs Granny"
horizontal_alignment = 1

[node name="LblRoundWinner" type="Label" parent="PanelStartFight/Column"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Winner round 1: "
horizontal_alignment = 1

[node name="LblRound" type="Label" parent="PanelStartFight/Column"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Round 1 of 10"
horizontal_alignment = 1

[node name="BtnFight" type="Button" parent="PanelStartFight/Column"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Fight!"

[node name="PanelEndFight" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 180.0
grow_horizontal = 2

[node name="Column" type="VBoxContainer" parent="PanelEndFight"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="LblNames" type="Label" parent="PanelEndFight/Column"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Granny vs Granny"
horizontal_alignment = 1

[node name="LblWinner" type="Label" parent="PanelEndFight/Column"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Winner: Granny"
horizontal_alignment = 1

[node name="LblPrize" type="Label" parent="PanelEndFight/Column"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Your grannies are set for life!"
horizontal_alignment = 1

[node name="BtnEndFight" type="Button" parent="PanelEndFight/Column"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Okay"

[connection signal="pressed" from="PanelStartFight/Column/BtnFight" to="." method="_on_btn_fight_pressed"]
[connection signal="pressed" from="PanelEndFight/Column/BtnEndFight" to="." method="_on_btn_end_fight_pressed"]
